--- a/todoList/index.html
+++ b/todoList/index.html
@@ -41,7 +41,7 @@
                 <div class="task">
 
                     <div class="left-side">
-                        <input type="checkbox" class="check-btn">
+                        <input type="checkbox" class="check-btn" checked>
                         <span class="task-name">Ekmek al</span>
                     </div>
                     <div class="right-side">
